--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div id="yin-yang"></div>
         <h1>ПОРТФОЛИО</h1>
-        <h2>Я пока учусь...</h2>
+        <h2>Я пока учусь...<br> пока получается не очень</h2>
     </div>
 </body>
 </html>
