--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div id="yin-yang"></div>
         <h1>ПОРТФОЛИО</h1>
         <h2>Я пока учусь...<br> пока получается не очень</h2>
+        <h2>не могу найти нормальную шпаргалку по Git и GitHub <br>
+        либо попадается большая книга (которую читать некогда и не вижу смысла),<br>
+        либо какая-то муть. мне надо всего десяток команд знать.</h2>
     </div>
 </body>
 </html>
