--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h2>не могу найти нормальную шпаргалку по Git и GitHub <br>
         либо попадается большая книга (которую читать некогда и не вижу смысла),<br>
         либо какая-то муть. мне надо всего десяток команд знать.</h2>
+        <div class="text">еще какой-то текст</div>
     </div>
 </body>
 </html>
