--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         либо попадается большая книга (которую читать некогда и не вижу смысла),<br>
         либо какая-то муть. мне надо всего десяток команд знать.</h2>
         <div class="text">еще какой-то текст</div>
+        <a href="#">Это ссылка</a>
     </div>
 </body>
 </html>
