Добавил GULP модули

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="container">
         <div id="yin-yang"></div>
         <h1>ПОРТФОЛИО</h1>
-        <h2></h2>
+        <h2>Пока учусь...</h2>
+        <h2>еще пока учусь...</h2>
     </div>
 </body>
 </html>
