Настройка модулей node

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Портфолио</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/app.min.css">
 </head>
 <body>
     <div class="container">
@@ -19,5 +20,6 @@
         <div class="text">еще какой-то текст</div>
         <a href="#">Это ссылка</a>
     </div>
+    <script src="js/app.min.js"></script>
 </body>
 </html>
